--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Mohammad Rasel</title>
   </head>
   <body>
-<h1>Hello from the world of git</h1>
+<h1>welcome from the world of git</h1>
   </body>
 </html>
