--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
 <h1>welcome from the world of git</h1>
+<form action="mailto:hermione@potionfy.com" method="post" enctype="text/plain">
+Name:<br>
+    <input type="text" name="name"><br>
+    E-mail:<br>
+    <input type="text" name="mail"><br>
+    <input type="submit" value="Send">
+    <input type="reset" value="Reset">
+</form>
+
   </body>
 </html>
